[project]
name = "etl-saphana-athena"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcus Holanda",email = "mvsh777@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "athena-mvsh (>=0.0.18,<0.0.19)",
    "hdbcli (>=2.23.27,<3.0.0)",
    "sqlalchemy-hana (>=3.0.1,<4.0.0)",
    "textual (>=2.1.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "etl_saphana_athena", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
export = "etl_saphana_athena.app:main"

